tests/ui/unexpected-modifier.stderr
error: unexpected modifier
 --> $DIR/tests/ui/unexpected-modifier.rs:4:10
  |
4 |     fn [<:lower x>]() {}
  |          ^^^^^^
